--- a/shAkalam/saMhitA/sarva-prastutiH/08/072.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/08/072.md
@@ -13,10 +13,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/01_haviShkRNudhvamA_gamadadhvaryurvanate.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/01_haviShkRNudhvamA_gamadadhvaryurvanate.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/01_haviShkRNudhvamA_gamadadhvaryurvanate.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/01_haviShkRNudhvamA_gamadadhvaryurvanate.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/01_haviShkRNudhvamA_gamadadhvaryurvanate.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/01_haviShkRNudhvamA_gamadadhvaryurvanate.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/01_haviShkRNudhvamA_gamadadhvaryurvanate.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/01_haviShkRNudhvamA_gamadadhvaryurvanate.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/01_haviShkRNudhvamA_gamadadhvaryurvanate.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -26,10 +26,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/02_ni_tigmamabhyaM1shuM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/02_ni_tigmamabhyaM1shuM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/02_ni_tigmamabhyaM1shuM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/02_ni_tigmamabhyaM1shuM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/02_ni_tigmamabhyaM1shuM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/02_ni_tigmamabhyaM1shuM.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/02_ni_tigmamabhyaM1shuM.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/02_ni_tigmamabhyaM1shuM.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/072/02_ni_tigmamabhyaM1shuM.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/02_ni_tigmamabhyaM1shuM.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -39,10 +39,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/03_antarichChanti_taM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/03_antarichChanti_taM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/03_antarichChanti_taM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/03_antarichChanti_taM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/03_antarichChanti_taM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/03_antarichChanti_taM.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/03_antarichChanti_taM.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/03_antarichChanti_taM.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/072/03_antarichChanti_taM.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/03_antarichChanti_taM.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -52,10 +52,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/04_jAmyatItape_dhanurvayodhA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/04_jAmyatItape_dhanurvayodhA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/04_jAmyatItape_dhanurvayodhA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/04_jAmyatItape_dhanurvayodhA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/04_jAmyatItape_dhanurvayodhA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/04_jAmyatItape_dhanurvayodhA.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/04_jAmyatItape_dhanurvayodhA.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/04_jAmyatItape_dhanurvayodhA.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/072/04_jAmyatItape_dhanurvayodhA.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/04_jAmyatItape_dhanurvayodhA.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -65,10 +65,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/05_charanvatso_rushanniha.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/05_charanvatso_rushanniha.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/05_charanvatso_rushanniha.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/05_charanvatso_rushanniha.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/05_charanvatso_rushanniha.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/05_charanvatso_rushanniha.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/05_charanvatso_rushanniha.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/05_charanvatso_rushanniha.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/05_charanvatso_rushanniha.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -78,10 +78,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/06_uto_nvasya.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/06_uto_nvasya.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/06_uto_nvasya.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/06_uto_nvasya.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/06_uto_nvasya.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/06_uto_nvasya.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/06_uto_nvasya.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/06_uto_nvasya.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/072/06_uto_nvasya.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/06_uto_nvasya.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -91,10 +91,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/07_duhanti_saptaikAmupa.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/07_duhanti_saptaikAmupa.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/07_duhanti_saptaikAmupa.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/07_duhanti_saptaikAmupa.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/07_duhanti_saptaikAmupa.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/07_duhanti_saptaikAmupa.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/07_duhanti_saptaikAmupa.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/07_duhanti_saptaikAmupa.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/07_duhanti_saptaikAmupa.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -104,10 +104,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/08_A_dashabhirvivasvata.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/08_A_dashabhirvivasvata.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/08_A_dashabhirvivasvata.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/08_A_dashabhirvivasvata.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/08_A_dashabhirvivasvata.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/08_A_dashabhirvivasvata.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/08_A_dashabhirvivasvata.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/08_A_dashabhirvivasvata.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/08_A_dashabhirvivasvata.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -117,10 +117,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/09_pari_tridhAturadhvaraM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/09_pari_tridhAturadhvaraM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/09_pari_tridhAturadhvaraM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/09_pari_tridhAturadhvaraM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/09_pari_tridhAturadhvaraM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/09_pari_tridhAturadhvaraM.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/09_pari_tridhAturadhvaraM.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/09_pari_tridhAturadhvaraM.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/09_pari_tridhAturadhvaraM.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -130,10 +130,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/10_sinchanti_namasAvatamuchchAchakraM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/10_sinchanti_namasAvatamuchchAchakraM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/10_sinchanti_namasAvatamuchchAchakraM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/10_sinchanti_namasAvatamuchchAchakraM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/10_sinchanti_namasAvatamuchchAchakraM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/10_sinchanti_namasAvatamuchchAchakraM.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/10_sinchanti_namasAvatamuchchAchakraM.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/10_sinchanti_namasAvatamuchchAchakraM.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/10_sinchanti_namasAvatamuchchAchakraM.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -143,10 +143,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/11_abhyAramidadrayo_niShiktaM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/11_abhyAramidadrayo_niShiktaM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/11_abhyAramidadrayo_niShiktaM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/11_abhyAramidadrayo_niShiktaM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/11_abhyAramidadrayo_niShiktaM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/11_abhyAramidadrayo_niShiktaM.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/11_abhyAramidadrayo_niShiktaM.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/11_abhyAramidadrayo_niShiktaM.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/072/11_abhyAramidadrayo_niShiktaM.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/11_abhyAramidadrayo_niShiktaM.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -156,10 +156,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/12_gAva_upAvatAvataM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/12_gAva_upAvatAvataM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/12_gAva_upAvatAvataM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/12_gAva_upAvatAvataM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/12_gAva_upAvatAvataM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/12_gAva_upAvatAvataM.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/12_gAva_upAvatAvataM.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/12_gAva_upAvatAvataM.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/072/12_gAva_upAvatAvataM.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/12_gAva_upAvatAvataM.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -169,10 +169,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/13_A_sute.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/13_A_sute.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/13_A_sute.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/13_A_sute.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/13_A_sute.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/13_A_sute.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/13_A_sute.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/13_A_sute.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/13_A_sute.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -182,10 +182,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/14_te_jAnata.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/14_te_jAnata.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/14_te_jAnata.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/14_te_jAnata.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/14_te_jAnata.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/14_te_jAnata.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/14_te_jAnata.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/14_te_jAnata.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/14_te_jAnata.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -195,10 +195,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/15_upa_srakveShu.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/15_upa_srakveShu.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/15_upa_srakveShu.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/15_upa_srakveShu.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/15_upa_srakveShu.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/15_upa_srakveShu.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/15_upa_srakveShu.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/15_upa_srakveShu.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/072/15_upa_srakveShu.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/15_upa_srakveShu.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -208,10 +208,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/16_adhuxatpipyuShImiShamUrjaM_saptapadImariH.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/16_adhuxatpipyuShImiShamUrjaM_saptapadImariH.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/16_adhuxatpipyuShImiShamUrjaM_saptapadImariH.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/16_adhuxatpipyuShImiShamUrjaM_saptapadImariH.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/16_adhuxatpipyuShImiShamUrjaM_saptapadImariH.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/16_adhuxatpipyuShImiShamUrjaM_saptapadImariH.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/16_adhuxatpipyuShImiShamUrjaM_saptapadImariH.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/16_adhuxatpipyuShImiShamUrjaM_saptapadImariH.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/16_adhuxatpipyuShImiShamUrjaM_saptapadImariH.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -221,10 +221,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/17_somasya_mitrAvaruNoditA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/17_somasya_mitrAvaruNoditA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/17_somasya_mitrAvaruNoditA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/17_somasya_mitrAvaruNoditA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/17_somasya_mitrAvaruNoditA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/17_somasya_mitrAvaruNoditA.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/17_somasya_mitrAvaruNoditA.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/17_somasya_mitrAvaruNoditA.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/072/17_somasya_mitrAvaruNoditA.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/17_somasya_mitrAvaruNoditA.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -234,10 +234,10 @@ title = "०७२"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/072/18_uto_nvasya.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/072/18_uto_nvasya.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/072/18_uto_nvasya.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/072/18_uto_nvasya.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/072/18_uto_nvasya.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/072/18_uto_nvasya.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/072/18_uto_nvasya.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/072/18_uto_nvasya.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/072/18_uto_nvasya.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
