--- a/shAkalam/saMhitA/sarva-prastutiH/08/073.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/08/073.md
@@ -13,10 +13,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/01_udIrAthAmRtAyate_yunjAthAmashvinA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/01_udIrAthAmRtAyate_yunjAthAmashvinA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/01_udIrAthAmRtAyate_yunjAthAmashvinA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/01_udIrAthAmRtAyate_yunjAthAmashvinA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/01_udIrAthAmRtAyate_yunjAthAmashvinA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/01_udIrAthAmRtAyate_yunjAthAmashvinA.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/01_udIrAthAmRtAyate_yunjAthAmashvinA.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/01_udIrAthAmRtAyate_yunjAthAmashvinA.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/01_udIrAthAmRtAyate_yunjAthAmashvinA.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -26,10 +26,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/02_nimiShashchijjavIyasA_rathenA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/02_nimiShashchijjavIyasA_rathenA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/02_nimiShashchijjavIyasA_rathenA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/02_nimiShashchijjavIyasA_rathenA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/02_nimiShashchijjavIyasA_rathenA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/02_nimiShashchijjavIyasA_rathenA.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/02_nimiShashchijjavIyasA_rathenA.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/02_nimiShashchijjavIyasA_rathenA.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/02_nimiShashchijjavIyasA_rathenA.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -39,10 +39,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/03_upa_stRNItamatraye.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/03_upa_stRNItamatraye.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/03_upa_stRNItamatraye.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/03_upa_stRNItamatraye.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/03_upa_stRNItamatraye.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/03_upa_stRNItamatraye.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/03_upa_stRNItamatraye.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/03_upa_stRNItamatraye.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/03_upa_stRNItamatraye.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -52,10 +52,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/04_kuha_sthaH.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/04_kuha_sthaH.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/04_kuha_sthaH.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/04_kuha_sthaH.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/04_kuha_sthaH.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/04_kuha_sthaH.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/04_kuha_sthaH.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/04_kuha_sthaH.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/04_kuha_sthaH.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -65,10 +65,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/05_yadadya_karhi.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/05_yadadya_karhi.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/05_yadadya_karhi.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/05_yadadya_karhi.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/05_yadadya_karhi.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/05_yadadya_karhi.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/05_yadadya_karhi.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/05_yadadya_karhi.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/05_yadadya_karhi.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -78,10 +78,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/06_ashvinA_yAmahUtamA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/06_ashvinA_yAmahUtamA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/06_ashvinA_yAmahUtamA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/06_ashvinA_yAmahUtamA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/06_ashvinA_yAmahUtamA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/06_ashvinA_yAmahUtamA.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/06_ashvinA_yAmahUtamA.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/06_ashvinA_yAmahUtamA.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/06_ashvinA_yAmahUtamA.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -91,10 +91,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/07_avantamatraye_gRhaM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/07_avantamatraye_gRhaM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/07_avantamatraye_gRhaM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/07_avantamatraye_gRhaM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/07_avantamatraye_gRhaM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/07_avantamatraye_gRhaM.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/07_avantamatraye_gRhaM.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/07_avantamatraye_gRhaM.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/07_avantamatraye_gRhaM.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -104,10 +104,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/08_varethe_agnimAtapo.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/08_varethe_agnimAtapo.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/08_varethe_agnimAtapo.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/08_varethe_agnimAtapo.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/08_varethe_agnimAtapo.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/08_varethe_agnimAtapo.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/08_varethe_agnimAtapo.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/08_varethe_agnimAtapo.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/08_varethe_agnimAtapo.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -117,10 +117,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/09_pra_saptavadhrirAshasA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/09_pra_saptavadhrirAshasA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/09_pra_saptavadhrirAshasA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/09_pra_saptavadhrirAshasA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/09_pra_saptavadhrirAshasA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/09_pra_saptavadhrirAshasA.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/09_pra_saptavadhrirAshasA.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/09_pra_saptavadhrirAshasA.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/073/09_pra_saptavadhrirAshasA.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/09_pra_saptavadhrirAshasA.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -130,10 +130,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/10_ihA_gataM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/10_ihA_gataM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/10_ihA_gataM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/10_ihA_gataM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/10_ihA_gataM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/10_ihA_gataM.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/10_ihA_gataM.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/10_ihA_gataM.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/10_ihA_gataM.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -143,10 +143,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/11_kimidaM_vAM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/11_kimidaM_vAM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/11_kimidaM_vAM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/11_kimidaM_vAM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/11_kimidaM_vAM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/11_kimidaM_vAM.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/11_kimidaM_vAM.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/11_kimidaM_vAM.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/073/11_kimidaM_vAM.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/11_kimidaM_vAM.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -156,10 +156,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/12_samAnaM_vAM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/12_samAnaM_vAM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/12_samAnaM_vAM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/12_samAnaM_vAM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/12_samAnaM_vAM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/12_samAnaM_vAM.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/12_samAnaM_vAM.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/12_samAnaM_vAM.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/12_samAnaM_vAM.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -169,10 +169,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/13_yo_vAM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/13_yo_vAM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/13_yo_vAM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/13_yo_vAM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/13_yo_vAM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/13_yo_vAM.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/13_yo_vAM.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/13_yo_vAM.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/13_yo_vAM.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -182,10 +182,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/14_A_no.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/14_A_no.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/14_A_no.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/14_A_no.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/14_A_no.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/14_A_no.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/14_A_no.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/14_A_no.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/14_A_no.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -195,10 +195,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/15_mA_no.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/15_mA_no.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/15_mA_no.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/15_mA_no.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/15_mA_no.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/15_mA_no.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/15_mA_no.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/15_mA_no.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/15_mA_no.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -208,10 +208,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/16_aruNapsuruShA_abhUdakarjyotirRtAvarI.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/16_aruNapsuruShA_abhUdakarjyotirRtAvarI.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/16_aruNapsuruShA_abhUdakarjyotirRtAvarI.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/16_aruNapsuruShA_abhUdakarjyotirRtAvarI.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/16_aruNapsuruShA_abhUdakarjyotirRtAvarI.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/16_aruNapsuruShA_abhUdakarjyotirRtAvarI.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/16_aruNapsuruShA_abhUdakarjyotirRtAvarI.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/16_aruNapsuruShA_abhUdakarjyotirRtAvarI.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/16_aruNapsuruShA_abhUdakarjyotirRtAvarI.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -221,10 +221,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/17_ashvinA_su.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/17_ashvinA_su.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/17_ashvinA_su.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/17_ashvinA_su.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/17_ashvinA_su.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/17_ashvinA_su.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/17_ashvinA_su.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/17_ashvinA_su.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/17_ashvinA_su.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -234,10 +234,10 @@ title = "०७३"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/073/18_puraM_na.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/073/18_puraM_na.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/073/18_puraM_na.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/073/18_puraM_na.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/073/18_puraM_na.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/073/18_puraM_na.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/073/18_puraM_na.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/073/18_puraM_na.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/073/18_puraM_na.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
