--- a/shAkalam/saMhitA/sarva-prastutiH/08/078.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/08/078.md
@@ -13,10 +13,10 @@ title = "०७८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/078/01_puroLAshaM_no.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/078/01_puroLAshaM_no.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/078/01_puroLAshaM_no.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/078/01_puroLAshaM_no.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/078/01_puroLAshaM_no.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/078/01_puroLAshaM_no.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/078/01_puroLAshaM_no.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/078/01_puroLAshaM_no.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/078/01_puroLAshaM_no.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/078/01_puroLAshaM_no.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -26,10 +26,10 @@ title = "०७८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/078/02_A_no.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/078/02_A_no.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/078/02_A_no.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/078/02_A_no.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/078/02_A_no.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/078/02_A_no.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/078/02_A_no.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/078/02_A_no.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/078/02_A_no.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -39,10 +39,10 @@ title = "०७८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/078/03_uta_naH.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/078/03_uta_naH.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/078/03_uta_naH.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/078/03_uta_naH.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/078/03_uta_naH.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/078/03_uta_naH.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/078/03_uta_naH.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/078/03_uta_naH.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/078/03_uta_naH.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/078/03_uta_naH.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -52,10 +52,10 @@ title = "०७८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/078/04_nakIM_vRdhIka.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/078/04_nakIM_vRdhIka.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/078/04_nakIM_vRdhIka.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/078/04_nakIM_vRdhIka.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/078/04_nakIM_vRdhIka.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/078/04_nakIM_vRdhIka.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/078/04_nakIM_vRdhIka.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/078/04_nakIM_vRdhIka.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/078/04_nakIM_vRdhIka.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/078/04_nakIM_vRdhIka.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -65,10 +65,10 @@ title = "०७८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/078/05_nakImindro_nikartave.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/078/05_nakImindro_nikartave.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/078/05_nakImindro_nikartave.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/078/05_nakImindro_nikartave.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/078/05_nakImindro_nikartave.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/078/05_nakImindro_nikartave.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/078/05_nakImindro_nikartave.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/078/05_nakImindro_nikartave.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/078/05_nakImindro_nikartave.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -78,10 +78,10 @@ title = "०७८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/078/06_sa_manyuM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/078/06_sa_manyuM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/078/06_sa_manyuM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/078/06_sa_manyuM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/078/06_sa_manyuM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/078/06_sa_manyuM.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/078/06_sa_manyuM.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/078/06_sa_manyuM.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/078/06_sa_manyuM.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -91,10 +91,10 @@ title = "०७८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/078/07_kratva_itpUrNamudaraM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/078/07_kratva_itpUrNamudaraM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/078/07_kratva_itpUrNamudaraM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/078/07_kratva_itpUrNamudaraM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/078/07_kratva_itpUrNamudaraM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/078/07_kratva_itpUrNamudaraM.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/078/07_kratva_itpUrNamudaraM.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/078/07_kratva_itpUrNamudaraM.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/078/07_kratva_itpUrNamudaraM.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/078/07_kratva_itpUrNamudaraM.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -104,10 +104,10 @@ title = "०७८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/078/08_tve_vasUni.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/078/08_tve_vasUni.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/078/08_tve_vasUni.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/078/08_tve_vasUni.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/078/08_tve_vasUni.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/078/08_tve_vasUni.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/078/08_tve_vasUni.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/078/08_tve_vasUni.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/078/08_tve_vasUni.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -117,10 +117,10 @@ title = "०७८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/078/09_tvAmidyavayurmama_kAmo.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/078/09_tvAmidyavayurmama_kAmo.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/078/09_tvAmidyavayurmama_kAmo.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/078/09_tvAmidyavayurmama_kAmo.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/078/09_tvAmidyavayurmama_kAmo.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/078/09_tvAmidyavayurmama_kAmo.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/078/09_tvAmidyavayurmama_kAmo.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/078/09_tvAmidyavayurmama_kAmo.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/078/09_tvAmidyavayurmama_kAmo.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -130,10 +130,10 @@ title = "०७८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/078/10_tavedindrAhamAshasA_haste.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/078/10_tavedindrAhamAshasA_haste.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/078/10_tavedindrAhamAshasA_haste.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/078/10_tavedindrAhamAshasA_haste.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/078/10_tavedindrAhamAshasA_haste.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/078/10_tavedindrAhamAshasA_haste.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/078/10_tavedindrAhamAshasA_haste.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/078/10_tavedindrAhamAshasA_haste.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/078/10_tavedindrAhamAshasA_haste.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
