--- a/shAkalam/saMhitA/sarva-prastutiH/08/098.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/08/098.md
@@ -13,10 +13,10 @@ title = "०९८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/098/01_indrAya_sAma.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/098/01_indrAya_sAma.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/098/01_indrAya_sAma.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/098/01_indrAya_sAma.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/098/01_indrAya_sAma.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/098/01_indrAya_sAma.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/098/01_indrAya_sAma.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/098/01_indrAya_sAma.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/098/01_indrAya_sAma.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -26,10 +26,10 @@ title = "०९८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/098/02_tvamindrAbhibhUrasi_tvaM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/098/02_tvamindrAbhibhUrasi_tvaM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/098/02_tvamindrAbhibhUrasi_tvaM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/098/02_tvamindrAbhibhUrasi_tvaM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/098/02_tvamindrAbhibhUrasi_tvaM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/098/02_tvamindrAbhibhUrasi_tvaM.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/098/02_tvamindrAbhibhUrasi_tvaM.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/098/02_tvamindrAbhibhUrasi_tvaM.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/098/02_tvamindrAbhibhUrasi_tvaM.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -39,10 +39,10 @@ title = "०९८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/098/03_vibhrAjanjyotiShA_sva1ragachCho.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/098/03_vibhrAjanjyotiShA_sva1ragachCho.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/098/03_vibhrAjanjyotiShA_sva1ragachCho.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/098/03_vibhrAjanjyotiShA_sva1ragachCho.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/098/03_vibhrAjanjyotiShA_sva1ragachCho.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/098/03_vibhrAjanjyotiShA_sva1ragachCho.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/098/03_vibhrAjanjyotiShA_sva1ragachCho.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/098/03_vibhrAjanjyotiShA_sva1ragachCho.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/098/03_vibhrAjanjyotiShA_sva1ragachCho.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -52,10 +52,10 @@ title = "०९८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/098/04_endra_no.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/098/04_endra_no.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/098/04_endra_no.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/098/04_endra_no.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/098/04_endra_no.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/098/04_endra_no.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/098/04_endra_no.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/098/04_endra_no.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/098/04_endra_no.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/098/04_endra_no.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -65,10 +65,10 @@ title = "०९८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/098/05_abhi_hi.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/098/05_abhi_hi.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/098/05_abhi_hi.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/098/05_abhi_hi.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/098/05_abhi_hi.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/098/05_abhi_hi.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/098/05_abhi_hi.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/098/05_abhi_hi.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/098/05_abhi_hi.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/098/05_abhi_hi.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -78,10 +78,10 @@ title = "०९८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/098/06_tvaM_hi.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/098/06_tvaM_hi.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/098/06_tvaM_hi.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/098/06_tvaM_hi.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/098/06_tvaM_hi.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/098/06_tvaM_hi.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/098/06_tvaM_hi.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/098/06_tvaM_hi.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/098/06_tvaM_hi.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -91,10 +91,10 @@ title = "०९८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/098/07_adhA_hIndra.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/098/07_adhA_hIndra.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/098/07_adhA_hIndra.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/098/07_adhA_hIndra.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/098/07_adhA_hIndra.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/098/07_adhA_hIndra.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/098/07_adhA_hIndra.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/098/07_adhA_hIndra.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/098/07_adhA_hIndra.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/098/07_adhA_hIndra.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -104,10 +104,10 @@ title = "०९८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/098/08_vArNa_tvA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/098/08_vArNa_tvA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/098/08_vArNa_tvA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/098/08_vArNa_tvA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/098/08_vArNa_tvA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/098/08_vArNa_tvA.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/098/08_vArNa_tvA.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/098/08_vArNa_tvA.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/098/08_vArNa_tvA.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/098/08_vArNa_tvA.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -117,10 +117,10 @@ title = "०९८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/098/09_yunjanti_harI.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/098/09_yunjanti_harI.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/098/09_yunjanti_harI.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/098/09_yunjanti_harI.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/098/09_yunjanti_harI.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/098/09_yunjanti_harI.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/098/09_yunjanti_harI.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/098/09_yunjanti_harI.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/08/098/09_yunjanti_harI.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/098/09_yunjanti_harI.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -130,10 +130,10 @@ title = "०९८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/098/10_tvaM_na.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/098/10_tvaM_na.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/098/10_tvaM_na.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/098/10_tvaM_na.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/098/10_tvaM_na.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/098/10_tvaM_na.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/098/10_tvaM_na.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/098/10_tvaM_na.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/098/10_tvaM_na.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -143,10 +143,10 @@ title = "०९८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/098/11_tvaM_hi.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/098/11_tvaM_hi.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/098/11_tvaM_hi.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/098/11_tvaM_hi.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/098/11_tvaM_hi.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/098/11_tvaM_hi.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/098/11_tvaM_hi.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/098/11_tvaM_hi.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/098/11_tvaM_hi.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -156,10 +156,10 @@ title = "०९८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/098/12_tvAM_shuShminpuruhUta.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/098/12_tvAM_shuShminpuruhUta.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/098/12_tvAM_shuShminpuruhUta.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/098/12_tvAM_shuShminpuruhUta.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/098/12_tvAM_shuShminpuruhUta.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/08/098/12_tvAM_shuShminpuruhUta.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/08/098/12_tvAM_shuShminpuruhUta.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/08/098/12_tvAM_shuShminpuruhUta.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/08/098/12_tvAM_shuShminpuruhUta.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
