--- a/shAkalam/saMhitA/sarva-prastutiH/09/008.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/09/008.md
@@ -13,10 +13,10 @@ title = "००८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/09/008/01_ete_somA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/09/008/01_ete_somA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/09/008/01_ete_somA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/09/008/01_ete_somA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/09/008/01_ete_somA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/09/008/01_ete_somA.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/09/008/01_ete_somA.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/09/008/01_ete_somA.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/09/008/01_ete_somA.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/09/008/01_ete_somA.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -26,10 +26,10 @@ title = "००८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/09/008/02_punAnAsashchamUShado_gachChanto.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/09/008/02_punAnAsashchamUShado_gachChanto.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/09/008/02_punAnAsashchamUShado_gachChanto.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/09/008/02_punAnAsashchamUShado_gachChanto.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/09/008/02_punAnAsashchamUShado_gachChanto.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/09/008/02_punAnAsashchamUShado_gachChanto.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/09/008/02_punAnAsashchamUShado_gachChanto.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/09/008/02_punAnAsashchamUShado_gachChanto.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/09/008/02_punAnAsashchamUShado_gachChanto.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/09/008/02_punAnAsashchamUShado_gachChanto.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -39,10 +39,10 @@ title = "००८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/09/008/03_indrasya_soma.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/09/008/03_indrasya_soma.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/09/008/03_indrasya_soma.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/09/008/03_indrasya_soma.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/09/008/03_indrasya_soma.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/09/008/03_indrasya_soma.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/09/008/03_indrasya_soma.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/09/008/03_indrasya_soma.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/09/008/03_indrasya_soma.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -52,10 +52,10 @@ title = "००८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/09/008/04_mRjanti_tvA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/09/008/04_mRjanti_tvA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/09/008/04_mRjanti_tvA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/09/008/04_mRjanti_tvA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/09/008/04_mRjanti_tvA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/09/008/04_mRjanti_tvA.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/09/008/04_mRjanti_tvA.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/09/008/04_mRjanti_tvA.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/09/008/04_mRjanti_tvA.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/09/008/04_mRjanti_tvA.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -65,10 +65,10 @@ title = "००८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/09/008/05_devebhyastvA_madAya.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/09/008/05_devebhyastvA_madAya.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/09/008/05_devebhyastvA_madAya.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/09/008/05_devebhyastvA_madAya.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/09/008/05_devebhyastvA_madAya.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/09/008/05_devebhyastvA_madAya.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/09/008/05_devebhyastvA_madAya.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/09/008/05_devebhyastvA_madAya.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/09/008/05_devebhyastvA_madAya.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -78,10 +78,10 @@ title = "००८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/09/008/06_punAnaH_kalasheShvA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/09/008/06_punAnaH_kalasheShvA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/09/008/06_punAnaH_kalasheShvA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/09/008/06_punAnaH_kalasheShvA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/09/008/06_punAnaH_kalasheShvA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/09/008/06_punAnaH_kalasheShvA.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/09/008/06_punAnaH_kalasheShvA.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/09/008/06_punAnaH_kalasheShvA.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/09/008/06_punAnaH_kalasheShvA.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -91,10 +91,10 @@ title = "००८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/09/008/07_maghona_A.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/09/008/07_maghona_A.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/09/008/07_maghona_A.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/09/008/07_maghona_A.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/09/008/07_maghona_A.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/09/008/07_maghona_A.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/09/008/07_maghona_A.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/09/008/07_maghona_A.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton_notes/09/008/07_maghona_A.md"  newLevelForH1="4" title="Jamison & Brereton Note"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/09/008/07_maghona_A.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -104,10 +104,10 @@ title = "००८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/09/008/08_vRShTiM_divaH.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/09/008/08_vRShTiM_divaH.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/09/008/08_vRShTiM_divaH.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/09/008/08_vRShTiM_divaH.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/09/008/08_vRShTiM_divaH.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/09/008/08_vRShTiM_divaH.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/09/008/08_vRShTiM_divaH.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/09/008/08_vRShTiM_divaH.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/09/008/08_vRShTiM_divaH.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
@@ -117,10 +117,10 @@ title = "००८"
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/09/008/09_nRchaxasaM_tvA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/09/008/09_nRchaxasaM_tvA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/09/008/09_nRchaxasaM_tvA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/09/008/09_nRchaxasaM_tvA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/09/008/09_nRchaxasaM_tvA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/sAyaNa-bhAShyam/09/008/09_nRchaxasaM_tvA.md"  newLevelForH1="3" title="सायण-भाष्यम्"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/wilson/09/008/09_nRchaxasaM_tvA.md"  newLevelForH1="3" title="Wilson"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/jamison_brereton/09/008/09_nRchaxasaM_tvA.md"  newLevelForH1="3" title="Jamison & Brereton"  > </div>
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/griffith/09/008/09_nRchaxasaM_tvA.md"  newLevelForH1="3" title="RTH Griffith"  > </div>
