--- a/shAkalam/saMhitA/sarva-prastutiH/08/008.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/08/008.md
@@ -12,7 +12,7 @@ title = "००८"
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/01_A_no.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/01_A_no.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/01_A_no.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/01_A_no.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/01_A_no.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/01_A_no.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/01_A_no.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -24,14 +24,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/01_A_no.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/01_A_no.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/01_A_no.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 02 आ नूनम् - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/02_A_nUnaM.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/02_A_nUnaM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/02_A_nUnaM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/02_A_nUnaM.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/02_A_nUnaM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/02_A_nUnaM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/02_A_nUnaM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -43,14 +43,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/02_A_nUnaM.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/02_A_nUnaM.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/02_A_nUnaM.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 03 आ यातम् - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/03_A_yAtaM.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/03_A_yAtaM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/03_A_yAtaM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/03_A_yAtaM.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/03_A_yAtaM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/03_A_yAtaM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/03_A_yAtaM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -62,14 +62,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/03_A_yAtaM.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/03_A_yAtaM.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/03_A_yAtaM.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 04 आ नो - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/04_A_no.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/04_A_no.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/04_A_no.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/04_A_no.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/04_A_no.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/04_A_no.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/04_A_no.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -81,14 +81,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/04_A_no.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/04_A_no.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/04_A_no.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 05 आ नो - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/05_A_no.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/05_A_no.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/05_A_no.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/05_A_no.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/05_A_no.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/05_A_no.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/05_A_no.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -100,14 +100,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/05_A_no.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/05_A_no.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/05_A_no.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 06 यच्चिद्धि वाम् - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/06_yachchiddhi_vAM.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/06_yachchiddhi_vAM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/06_yachchiddhi_vAM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/06_yachchiddhi_vAM.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/06_yachchiddhi_vAM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/06_yachchiddhi_vAM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/06_yachchiddhi_vAM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -119,14 +119,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/06_yachchiddhi_vAM.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/06_yachchiddhi_vAM.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/06_yachchiddhi_vAM.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 07 दिवश्चिद्रोचनादध्या नो - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/07_divashchidrochanAdadhyA_no.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/07_divashchidrochanAdadhyA_no.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/07_divashchidrochanAdadhyA_no.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/07_divashchidrochanAdadhyA_no.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/07_divashchidrochanAdadhyA_no.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/07_divashchidrochanAdadhyA_no.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/07_divashchidrochanAdadhyA_no.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -138,14 +138,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/07_divashchidrochanAdadhyA_no.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/07_divashchidrochanAdadhyA_no.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/07_divashchidrochanAdadhyA_no.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 08 किमन्ये पर्यासतेऽस्मत्स्तोमेभिरश्विना - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/08_kimanye_paryAsate_asmatstomebhirashvinA.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/08_kimanye_paryAsate_asmatstomebhirashvinA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/08_kimanye_paryAsate_asmatstomebhirashvinA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/08_kimanye_paryAsate_asmatstomebhirashvinA.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/08_kimanye_paryAsate_asmatstomebhirashvinA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/08_kimanye_paryAsate_asmatstomebhirashvinA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/08_kimanye_paryAsate_asmatstomebhirashvinA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -157,14 +157,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/08_kimanye_paryAsate_asmatstomebhirashvinA.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/08_kimanye_paryAsate_asmatstomebhirashvinA.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/08_kimanye_paryAsate_asmatstomebhirashvinA.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 09 आ वाम् - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/09_A_vAM.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/09_A_vAM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/09_A_vAM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/09_A_vAM.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/09_A_vAM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/09_A_vAM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/09_A_vAM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -176,14 +176,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/09_A_vAM.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/09_A_vAM.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/09_A_vAM.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 10 आ यद्वाम् - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/10_A_yadvAM.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/10_A_yadvAM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/10_A_yadvAM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/10_A_yadvAM.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/10_A_yadvAM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/10_A_yadvAM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/10_A_yadvAM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -195,14 +195,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/10_A_yadvAM.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/10_A_yadvAM.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/10_A_yadvAM.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 11 अतः सहस्रनिर्णिजा - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/11_ataH_sahasranirNijA.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/11_ataH_sahasranirNijA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/11_ataH_sahasranirNijA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/11_ataH_sahasranirNijA.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/11_ataH_sahasranirNijA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/11_ataH_sahasranirNijA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/11_ataH_sahasranirNijA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -214,14 +214,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/11_ataH_sahasranirNijA.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/11_ataH_sahasranirNijA.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/11_ataH_sahasranirNijA.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 12 पुरुमन्द्रा पुरूवसू - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/12_purumandrA_purUvasU.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/12_purumandrA_purUvasU.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/12_purumandrA_purUvasU.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/12_purumandrA_purUvasU.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/12_purumandrA_purUvasU.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/12_purumandrA_purUvasU.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/12_purumandrA_purUvasU.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -233,14 +233,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/12_purumandrA_purUvasU.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/12_purumandrA_purUvasU.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/12_purumandrA_purUvasU.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 13 आ नो - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/13_A_no.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/13_A_no.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/13_A_no.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/13_A_no.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/13_A_no.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/13_A_no.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/13_A_no.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -252,14 +252,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/13_A_no.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/13_A_no.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/13_A_no.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 14 यन्नासत्या परावति - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/14_yannAsatyA_parAvati.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/14_yannAsatyA_parAvati.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/14_yannAsatyA_parAvati.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/14_yannAsatyA_parAvati.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/14_yannAsatyA_parAvati.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/14_yannAsatyA_parAvati.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/14_yannAsatyA_parAvati.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -271,14 +271,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/14_yannAsatyA_parAvati.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/14_yannAsatyA_parAvati.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/14_yannAsatyA_parAvati.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 15 यो वाम् - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/15_yo_vAM.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/15_yo_vAM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/15_yo_vAM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/15_yo_vAM.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/15_yo_vAM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/15_yo_vAM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/15_yo_vAM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -290,14 +290,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/15_yo_vAM.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/15_yo_vAM.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/15_yo_vAM.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 16 प्रास्मा ऊर्जम् - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/16_prAsmA_UrjaM.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/16_prAsmA_UrjaM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/16_prAsmA_UrjaM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/16_prAsmA_UrjaM.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/16_prAsmA_UrjaM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/16_prAsmA_UrjaM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/16_prAsmA_UrjaM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -309,14 +309,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/16_prAsmA_UrjaM.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/16_prAsmA_UrjaM.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/16_prAsmA_UrjaM.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 17 आ नो - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/17_A_no.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/17_A_no.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/17_A_no.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/17_A_no.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/17_A_no.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/17_A_no.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/17_A_no.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -328,14 +328,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/17_A_no.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/17_A_no.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/17_A_no.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 18 आ वाम् - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/18_A_vAM.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/18_A_vAM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/18_A_vAM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/18_A_vAM.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/18_A_vAM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/18_A_vAM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/18_A_vAM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -347,14 +347,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/18_A_vAM.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/18_A_vAM.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/18_A_vAM.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 19 आ नो - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/19_A_no.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/19_A_no.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/19_A_no.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/19_A_no.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/19_A_no.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/19_A_no.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/19_A_no.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -366,14 +366,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/19_A_no.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/19_A_no.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/19_A_no.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 20 याभिः कण्वम् - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/20_yAbhiH_kaNvaM.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/20_yAbhiH_kaNvaM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/20_yAbhiH_kaNvaM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/20_yAbhiH_kaNvaM.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/20_yAbhiH_kaNvaM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/20_yAbhiH_kaNvaM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/20_yAbhiH_kaNvaM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -385,14 +385,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/20_yAbhiH_kaNvaM.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/20_yAbhiH_kaNvaM.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/20_yAbhiH_kaNvaM.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 21 याभिर्नरा त्रसदस्युमावतम् - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/21_yAbhirnarA_trasadasyumAvataM.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/21_yAbhirnarA_trasadasyumAvataM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/21_yAbhirnarA_trasadasyumAvataM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/21_yAbhirnarA_trasadasyumAvataM.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/21_yAbhirnarA_trasadasyumAvataM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/21_yAbhirnarA_trasadasyumAvataM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/21_yAbhirnarA_trasadasyumAvataM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -404,14 +404,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/21_yAbhirnarA_trasadasyumAvataM.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/21_yAbhirnarA_trasadasyumAvataM.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/21_yAbhirnarA_trasadasyumAvataM.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 22 प्र वाम् - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/22_pra_vAM.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/22_pra_vAM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/22_pra_vAM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/22_pra_vAM.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/22_pra_vAM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/22_pra_vAM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/22_pra_vAM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -423,14 +423,14 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/22_pra_vAM.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/22_pra_vAM.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/22_pra_vAM.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 23 त्रीणि पदान्यश्विनोराविः - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/008/23_trINi_padAnyashvinorAviH.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/008/23_trINi_padAnyashvinorAviH.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/008/23_trINi_padAnyashvinorAviH.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/008/23_trINi_padAnyashvinorAviH.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/008/23_trINi_padAnyashvinorAviH.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/008/23_trINi_padAnyashvinorAviH.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/008/23_trINi_padAnyashvinorAviH.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -442,4 +442,5 @@ title = "००८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/008/23_trINi_padAnyashvinorAviH.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/008/23_trINi_padAnyashvinorAviH.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/008/23_trINi_padAnyashvinorAviH.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
