--- a/shAkalam/saMhitA/sarva-prastutiH/08/031.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/08/031.md
@@ -12,7 +12,7 @@ title = "०३१"
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/01_yo_yajAti.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/01_yo_yajAti.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/01_yo_yajAti.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/01_yo_yajAti.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/01_yo_yajAti.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/01_yo_yajAti.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/01_yo_yajAti.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -24,14 +24,14 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/01_yo_yajAti.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/01_yo_yajAti.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/01_yo_yajAti.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 02 पुरोळाशं यो - गायत्री
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/02_puroLAshaM_yo.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/02_puroLAshaM_yo.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/02_puroLAshaM_yo.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/02_puroLAshaM_yo.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/02_puroLAshaM_yo.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/02_puroLAshaM_yo.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/02_puroLAshaM_yo.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -43,14 +43,14 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/02_puroLAshaM_yo.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/02_puroLAshaM_yo.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/02_puroLAshaM_yo.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 03 तस्य द्युमाँ - गायत्री
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/03_tasya_dyumA_N.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/03_tasya_dyumA_N.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/03_tasya_dyumA_N.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/03_tasya_dyumA_N.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/03_tasya_dyumA_N.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/03_tasya_dyumA_N.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/03_tasya_dyumA_N.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -62,14 +62,14 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/03_tasya_dyumA_N.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/03_tasya_dyumA_N.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/03_tasya_dyumA_N.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 04 अस्य प्रजावती - गायत्री
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/04_asya_prajAvatI.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/04_asya_prajAvatI.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/04_asya_prajAvatI.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/04_asya_prajAvatI.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/04_asya_prajAvatI.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/04_asya_prajAvatI.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/04_asya_prajAvatI.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -81,14 +81,14 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/04_asya_prajAvatI.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/04_asya_prajAvatI.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/04_asya_prajAvatI.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 05 या दम्पती - गायत्री
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/05_yA_dampatI.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/05_yA_dampatI.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/05_yA_dampatI.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/05_yA_dampatI.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/05_yA_dampatI.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/05_yA_dampatI.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/05_yA_dampatI.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -100,14 +100,14 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/05_yA_dampatI.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/05_yA_dampatI.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/05_yA_dampatI.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 06 प्रति प्राशव्याँ - गायत्री
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/06_prati_prAshavyA_N.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/06_prati_prAshavyA_N.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/06_prati_prAshavyA_N.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/06_prati_prAshavyA_N.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/06_prati_prAshavyA_N.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/06_prati_prAshavyA_N.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/06_prati_prAshavyA_N.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -119,14 +119,14 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/06_prati_prAshavyA_N.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/06_prati_prAshavyA_N.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/06_prati_prAshavyA_N.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 07 न देवानामपि - गायत्री
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/07_na_devAnAmapi.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/07_na_devAnAmapi.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/07_na_devAnAmapi.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/07_na_devAnAmapi.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/07_na_devAnAmapi.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/07_na_devAnAmapi.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/07_na_devAnAmapi.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -138,14 +138,14 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/07_na_devAnAmapi.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/07_na_devAnAmapi.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/07_na_devAnAmapi.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 08 पुत्रिणा ता - गायत्री
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/08_putriNA_tA.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/08_putriNA_tA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/08_putriNA_tA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/08_putriNA_tA.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/08_putriNA_tA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/08_putriNA_tA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/08_putriNA_tA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -157,14 +157,14 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/08_putriNA_tA.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/08_putriNA_tA.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/08_putriNA_tA.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 09 वीतिहोत्रा कृतद्वसू - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/09_vItihotrA_kRtadvasU.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/09_vItihotrA_kRtadvasU.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/09_vItihotrA_kRtadvasU.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/09_vItihotrA_kRtadvasU.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/09_vItihotrA_kRtadvasU.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/09_vItihotrA_kRtadvasU.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/09_vItihotrA_kRtadvasU.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -176,14 +176,14 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/09_vItihotrA_kRtadvasU.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/09_vItihotrA_kRtadvasU.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/09_vItihotrA_kRtadvasU.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 10 आ शर्म - पादनिचृत्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/10_A_sharma.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/10_A_sharma.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/10_A_sharma.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/10_A_sharma.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/10_A_sharma.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/10_A_sharma.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/10_A_sharma.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -195,14 +195,14 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/10_A_sharma.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/10_A_sharma.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/10_A_sharma.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 11 ऐतु पूषा - गायत्री
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/11_aitu_pUShA.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/11_aitu_pUShA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/11_aitu_pUShA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/11_aitu_pUShA.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/11_aitu_pUShA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/11_aitu_pUShA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/11_aitu_pUShA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -214,14 +214,14 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/11_aitu_pUShA.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/11_aitu_pUShA.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/11_aitu_pUShA.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 12 अरमतिरनर्वणो विश्वो - गायत्री
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/12_aramatiranarvaNo_vishvo.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/12_aramatiranarvaNo_vishvo.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/12_aramatiranarvaNo_vishvo.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/12_aramatiranarvaNo_vishvo.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/12_aramatiranarvaNo_vishvo.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/12_aramatiranarvaNo_vishvo.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/12_aramatiranarvaNo_vishvo.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -233,14 +233,14 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/12_aramatiranarvaNo_vishvo.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/12_aramatiranarvaNo_vishvo.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/12_aramatiranarvaNo_vishvo.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 13 यथा नो - गायत्री
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/13_yathA_no.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/13_yathA_no.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/13_yathA_no.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/13_yathA_no.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/13_yathA_no.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/13_yathA_no.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/13_yathA_no.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -252,14 +252,14 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/13_yathA_no.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/13_yathA_no.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/13_yathA_no.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 14 अग्निं वः - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/14_agniM_vaH.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/14_agniM_vaH.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/14_agniM_vaH.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/14_agniM_vaH.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/14_agniM_vaH.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/14_agniM_vaH.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/14_agniM_vaH.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -271,14 +271,14 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/14_agniM_vaH.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/14_agniM_vaH.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/14_agniM_vaH.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 15 मक्षू देववतो - पङ्क्तिः
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/15_maxU_devavato.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/15_maxU_devavato.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/15_maxU_devavato.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/15_maxU_devavato.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/15_maxU_devavato.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/15_maxU_devavato.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/15_maxU_devavato.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -290,14 +290,14 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/15_maxU_devavato.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/15_maxU_devavato.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/15_maxU_devavato.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 16 न यजमान - पङ्क्तिः
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/16_na_yajamAna.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/16_na_yajamAna.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/16_na_yajamAna.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/16_na_yajamAna.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/16_na_yajamAna.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/16_na_yajamAna.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/16_na_yajamAna.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -309,14 +309,14 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/16_na_yajamAna.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/16_na_yajamAna.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/16_na_yajamAna.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 17 नकिष्थं कर्मणा - पङ्क्तिः
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/17_nakiShTaM_karmaNA.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/17_nakiShTaM_karmaNA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/17_nakiShTaM_karmaNA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/17_nakiShTaM_karmaNA.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/17_nakiShTaM_karmaNA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/17_nakiShTaM_karmaNA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/17_nakiShTaM_karmaNA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -328,14 +328,14 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/17_nakiShTaM_karmaNA.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/17_nakiShTaM_karmaNA.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/17_nakiShTaM_karmaNA.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 18 असदत्र सुवीर्यमुत - पङ्क्तिः
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/031/18_asadatra_suvIryamuta.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/031/18_asadatra_suvIryamuta.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/031/18_asadatra_suvIryamuta.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/031/18_asadatra_suvIryamuta.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/031/18_asadatra_suvIryamuta.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/031/18_asadatra_suvIryamuta.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/031/18_asadatra_suvIryamuta.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -347,4 +347,5 @@ title = "०३१"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/031/18_asadatra_suvIryamuta.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/031/18_asadatra_suvIryamuta.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/031/18_asadatra_suvIryamuta.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
