--- a/shAkalam/saMhitA/sarva-prastutiH/08/037.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/08/037.md
@@ -12,7 +12,7 @@ title = "०३७"
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/037/01_predaM_brahma.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/037/01_predaM_brahma.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/037/01_predaM_brahma.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/037/01_predaM_brahma.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/037/01_predaM_brahma.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/037/01_predaM_brahma.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/037/01_predaM_brahma.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -24,14 +24,14 @@ title = "०३७"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/037/01_predaM_brahma.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/037/01_predaM_brahma.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/037/01_predaM_brahma.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 02 सेहान उग्र - महापङ्क्तिः
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/037/02_sehAna_ugra.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/037/02_sehAna_ugra.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/037/02_sehAna_ugra.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/037/02_sehAna_ugra.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/037/02_sehAna_ugra.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/037/02_sehAna_ugra.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/037/02_sehAna_ugra.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -43,14 +43,14 @@ title = "०३७"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/037/02_sehAna_ugra.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/037/02_sehAna_ugra.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/037/02_sehAna_ugra.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 03 एकराळस्य भुवनस्य - महापङ्क्तिः
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/037/03_ekarALasya_bhuvanasya.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/037/03_ekarALasya_bhuvanasya.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/037/03_ekarALasya_bhuvanasya.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/037/03_ekarALasya_bhuvanasya.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/037/03_ekarALasya_bhuvanasya.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/037/03_ekarALasya_bhuvanasya.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/037/03_ekarALasya_bhuvanasya.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -62,14 +62,14 @@ title = "०३७"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/037/03_ekarALasya_bhuvanasya.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/037/03_ekarALasya_bhuvanasya.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/037/03_ekarALasya_bhuvanasya.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 04 सस्थावाना यवयसि - महापङ्क्तिः
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/037/04_sasthAvAnA_yavayasi.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/037/04_sasthAvAnA_yavayasi.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/037/04_sasthAvAnA_yavayasi.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/037/04_sasthAvAnA_yavayasi.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/037/04_sasthAvAnA_yavayasi.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/037/04_sasthAvAnA_yavayasi.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/037/04_sasthAvAnA_yavayasi.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -81,14 +81,14 @@ title = "०३७"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/037/04_sasthAvAnA_yavayasi.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/037/04_sasthAvAnA_yavayasi.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/037/04_sasthAvAnA_yavayasi.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 05 क्षेमस्य च - महापङ्क्तिः
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/037/05_xemasya_cha.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/037/05_xemasya_cha.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/037/05_xemasya_cha.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/037/05_xemasya_cha.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/037/05_xemasya_cha.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/037/05_xemasya_cha.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/037/05_xemasya_cha.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -100,14 +100,14 @@ title = "०३७"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/037/05_xemasya_cha.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/037/05_xemasya_cha.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/037/05_xemasya_cha.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 06 क्षत्राय त्वमवसि - महापङ्क्तिः
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/037/06_xatrAya_tvamavasi.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/037/06_xatrAya_tvamavasi.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/037/06_xatrAya_tvamavasi.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/037/06_xatrAya_tvamavasi.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/037/06_xatrAya_tvamavasi.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/037/06_xatrAya_tvamavasi.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/037/06_xatrAya_tvamavasi.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -119,14 +119,14 @@ title = "०३७"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/037/06_xatrAya_tvamavasi.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/037/06_xatrAya_tvamavasi.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/037/06_xatrAya_tvamavasi.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 07 श्यावाश्वस्य रेभतस्तथा - महापङ्क्तिः
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/037/07_shyAvAshvasya_rebhatastathA.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/037/07_shyAvAshvasya_rebhatastathA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/037/07_shyAvAshvasya_rebhatastathA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/037/07_shyAvAshvasya_rebhatastathA.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/037/07_shyAvAshvasya_rebhatastathA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/037/07_shyAvAshvasya_rebhatastathA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/037/07_shyAvAshvasya_rebhatastathA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -138,4 +138,5 @@ title = "०३७"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/037/07_shyAvAshvasya_rebhatastathA.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/037/07_shyAvAshvasya_rebhatastathA.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/037/07_shyAvAshvasya_rebhatastathA.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
