--- a/shAkalam/saMhitA/sarva-prastutiH/08/042.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/08/042.md
@@ -12,7 +12,7 @@ title = "०४२"
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/042/01_astabhnAddyAmasuro_vishvavedA.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/042/01_astabhnAddyAmasuro_vishvavedA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/042/01_astabhnAddyAmasuro_vishvavedA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/042/01_astabhnAddyAmasuro_vishvavedA.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/042/01_astabhnAddyAmasuro_vishvavedA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/042/01_astabhnAddyAmasuro_vishvavedA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/042/01_astabhnAddyAmasuro_vishvavedA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -24,14 +24,14 @@ title = "०४२"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/042/01_astabhnAddyAmasuro_vishvavedA.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/042/01_astabhnAddyAmasuro_vishvavedA.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/042/01_astabhnAddyAmasuro_vishvavedA.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 02 एवा वन्दस्व - त्रिष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/042/02_evA_vandasva.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/042/02_evA_vandasva.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/042/02_evA_vandasva.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/042/02_evA_vandasva.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/042/02_evA_vandasva.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/042/02_evA_vandasva.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/042/02_evA_vandasva.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -43,14 +43,14 @@ title = "०४२"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/042/02_evA_vandasva.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/042/02_evA_vandasva.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/042/02_evA_vandasva.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 03 इमां धियम् - त्रिष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/042/03_imAM_dhiyaM.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/042/03_imAM_dhiyaM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/042/03_imAM_dhiyaM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/042/03_imAM_dhiyaM.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/042/03_imAM_dhiyaM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/042/03_imAM_dhiyaM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/042/03_imAM_dhiyaM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -62,14 +62,14 @@ title = "०४२"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/042/03_imAM_dhiyaM.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/042/03_imAM_dhiyaM.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/042/03_imAM_dhiyaM.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 04 आ वाम् - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/042/04_A_vAM.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/042/04_A_vAM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/042/04_A_vAM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/042/04_A_vAM.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/042/04_A_vAM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/042/04_A_vAM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/042/04_A_vAM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -81,14 +81,14 @@ title = "०४२"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/042/04_A_vAM.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/042/04_A_vAM.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/042/04_A_vAM.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 05 यथा वामत्रिरश्विना - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/042/05_yathA_vAmatrirashvinA.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/042/05_yathA_vAmatrirashvinA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/042/05_yathA_vAmatrirashvinA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/042/05_yathA_vAmatrirashvinA.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/042/05_yathA_vAmatrirashvinA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/042/05_yathA_vAmatrirashvinA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/042/05_yathA_vAmatrirashvinA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -100,14 +100,14 @@ title = "०४२"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/042/05_yathA_vAmatrirashvinA.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/042/05_yathA_vAmatrirashvinA.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/042/05_yathA_vAmatrirashvinA.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 06 एवा वामह्व - अनुष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/042/06_evA_vAmahva.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/042/06_evA_vAmahva.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/042/06_evA_vAmahva.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/042/06_evA_vAmahva.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/042/06_evA_vAmahva.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/042/06_evA_vAmahva.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/042/06_evA_vAmahva.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -119,4 +119,5 @@ title = "०४२"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/042/06_evA_vAmahva.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/042/06_evA_vAmahva.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/042/06_evA_vAmahva.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
