--- a/shAkalam/saMhitA/sarva-prastutiH/08/058.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/08/058.md
@@ -12,7 +12,7 @@ title = "०५८"
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/058/01_yamRtvijo_bahudhA.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/058/01_yamRtvijo_bahudhA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/058/01_yamRtvijo_bahudhA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/058/01_yamRtvijo_bahudhA.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/058/01_yamRtvijo_bahudhA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/058/01_yamRtvijo_bahudhA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/058/01_yamRtvijo_bahudhA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -24,14 +24,14 @@ title = "०५८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/058/01_yamRtvijo_bahudhA.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/058/01_yamRtvijo_bahudhA.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/058/01_yamRtvijo_bahudhA.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 02 एक एवाग्निर्बहुधा - त्रिष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/058/02_eka_evAgnirbahudhA.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/058/02_eka_evAgnirbahudhA.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/058/02_eka_evAgnirbahudhA.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/058/02_eka_evAgnirbahudhA.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/058/02_eka_evAgnirbahudhA.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/058/02_eka_evAgnirbahudhA.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/058/02_eka_evAgnirbahudhA.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -43,14 +43,14 @@ title = "०५८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/058/02_eka_evAgnirbahudhA.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/058/02_eka_evAgnirbahudhA.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/058/02_eka_evAgnirbahudhA.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
 
 ## 03 ज्योतिष्मन्तं केतुमन्तम् - त्रिष्टुप्
 <div class="js_include " url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/08/058/03_jyotiShmantaM_ketumantaM.md"  newLevelForH1="3" title="विश्वास-प्रस्तुतिः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/mUlam/08/058/03_jyotiShmantaM_ketumantaM.md"  newLevelForH1="3" title="मूलम्"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/thomson_solcum/08/058/03_jyotiShmantaM_ketumantaM.md"  newLevelForH1="4" title="Thomson Solcum restoration"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/vedaweb_annotation/08/058/03_jyotiShmantaM_ketumantaM.md"  newLevelForH1="4" title="Vedaweb annotation"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/pada-pAThaH/08/058/03_jyotiShmantaM_ketumantaM.md"  newLevelForH1="4" title="पद-पाठः"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/hellwig_grammar/08/058/03_jyotiShmantaM_ketumantaM.md"  newLevelForH1="4" title="Hellwig Grammar"  > </div>
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/anukramaNikA/08/058/03_jyotiShmantaM_ketumantaM.md"  newLevelForH1="4" title="अनुक्रमणिका"  fieldNames="devataa,RShiH,ChandaH"> </div>
@@ -62,4 +62,5 @@ title = "०५८"
 
 
 <div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/geldner/08/058/03_jyotiShmantaM_ketumantaM.md"  newLevelForH1="3" title="Geldner (De)"  > </div>
-
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/grassmann/08/058/03_jyotiShmantaM_ketumantaM.md"  newLevelForH1="3" title="Grassmann (De)"  > </div>
+<div class="js_include collapsed" url="/vedAH_Rk/shAkalam/saMhitA/elizarenkova/08/058/03_jyotiShmantaM_ketumantaM.md"  newLevelForH1="3" title="Elizarenkova (Ru)"  > </div>
